manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingestion-ing
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: ingestion.cloudpunk.shop
    http:
      paths:
      - backend:
          service:
            name: ingestion-ser
            port:
              number: 80
        path: "/"
        pathType: Prefix
